# DB 模块：仅当 VOX_USE_DB=ON 时由主 CMakeLists.txt 包含
# 驱动开关 VOX_USE_SQLITE3 / VOX_USE_DUCKDB / VOX_USE_PGSQL / VOX_USE_MYSQL 在主 CMakeLists 中定义

set(DB_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(DB_SOURCES
    ${DB_DIR}/vox_db.c
    ${DB_DIR}/vox_db_pool.c
    ${DB_DIR}/vox_orm.c
)

target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_SOURCES})
target_include_directories(${VOX_LIB_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# ===== 可选 DB 驱动 =====
if(VOX_USE_SQLITE3)
    find_package(SQLite3 QUIET)
    if(SQLite3_FOUND)
        target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_sqlite3.c)
        target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_SQLITE3=1)
        if(TARGET SQLite3::SQLite3)
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE SQLite3::SQLite3)
        elseif(TARGET SQLite::SQLite3)
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE SQLite::SQLite3)
        else()
            if(SQLite3_INCLUDE_DIRS)
                target_include_directories(${VOX_LIB_TARGET} PRIVATE ${SQLite3_INCLUDE_DIRS})
            endif()
            if(SQLite3_LIBRARIES)
                target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${SQLite3_LIBRARIES})
            endif()
        endif()
    else()
        find_path(SQLITE3_INCLUDE_DIR sqlite3.h)
        find_library(SQLITE3_LIBRARY NAMES sqlite3)
        if(SQLITE3_INCLUDE_DIR AND SQLITE3_LIBRARY)
            target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_sqlite3.c)
            target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_SQLITE3=1)
            target_include_directories(${VOX_LIB_TARGET} PRIVATE ${SQLITE3_INCLUDE_DIR})
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${SQLITE3_LIBRARY})
        else()
            message(FATAL_ERROR "SQLite3 not found. Disable VOX_USE_SQLITE3 or provide sqlite3 via system/vcpkg and CMAKE_PREFIX_PATH.")
        endif()
    endif()
endif()

if(VOX_USE_DUCKDB)
    find_path(DUCKDB_INCLUDE_DIR duckdb.h)
    find_library(DUCKDB_LIBRARY NAMES duckdb duckdb_static)
    if(DUCKDB_INCLUDE_DIR AND DUCKDB_LIBRARY)
        target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_duckdb.c)
        target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_DUCKDB=1)
        target_include_directories(${VOX_LIB_TARGET} PRIVATE ${DUCKDB_INCLUDE_DIR})
        target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${DUCKDB_LIBRARY})
        message(STATUS "Found DuckDB: ${DUCKDB_LIBRARY}")
    else()
        message(FATAL_ERROR "DuckDB not found. Disable VOX_USE_DUCKDB or provide duckdb via system/vcpkg and CMAKE_PREFIX_PATH.")
    endif()
endif()

if(VOX_USE_PGSQL)
    find_package(PostgreSQL QUIET)
    if(PostgreSQL_FOUND)
        target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_pgsql.c)
        target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_PGSQL=1)
        if(PostgreSQL_INCLUDE_DIRS)
            target_include_directories(${VOX_LIB_TARGET} PRIVATE ${PostgreSQL_INCLUDE_DIRS})
        endif()
        if(PostgreSQL_LIBRARIES)
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${PostgreSQL_LIBRARIES})
        endif()
    else()
        find_path(PGSQL_INCLUDE_DIR libpq-fe.h)
        find_library(PGSQL_LIBRARY NAMES pq libpq)
        if(PGSQL_INCLUDE_DIR AND PGSQL_LIBRARY)
            target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_pgsql.c)
            target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_PGSQL=1)
            target_include_directories(${VOX_LIB_TARGET} PRIVATE ${PGSQL_INCLUDE_DIR})
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${PGSQL_LIBRARY})
        else()
            message(FATAL_ERROR "PostgreSQL (libpq) not found. Disable VOX_USE_PGSQL or provide libpq.")
        endif()
    endif()
endif()

if(VOX_USE_MYSQL)
    find_package(MySQL QUIET)
    if(MySQL_FOUND)
        target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_mysql.c)
        target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_MYSQL=1)
        if(MySQL_INCLUDE_DIRS)
            target_include_directories(${VOX_LIB_TARGET} PRIVATE ${MySQL_INCLUDE_DIRS})
        endif()
        if(MySQL_LIBRARIES)
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${MySQL_LIBRARIES})
        endif()
        message(STATUS "Found MySQL via find_package")
    else()
        find_path(MYSQL_INCLUDE_DIR mysql.h
            PATHS /usr/include/mysql /usr/local/include/mysql)
        find_library(MYSQL_LIBRARY NAMES mysqlclient libmysql mysql
            PATHS /usr/lib /usr/local/lib)
        if(MYSQL_INCLUDE_DIR AND MYSQL_LIBRARY)
            target_sources(${VOX_LIB_TARGET} PRIVATE ${DB_DIR}/vox_db_mysql.c)
            target_compile_definitions(${VOX_LIB_TARGET} PRIVATE VOX_USE_MYSQL=1)
            target_include_directories(${VOX_LIB_TARGET} PRIVATE ${MYSQL_INCLUDE_DIR})
            target_link_libraries(${VOX_LIB_TARGET} PRIVATE ${MYSQL_LIBRARY})
        else()
            message(FATAL_ERROR "MySQL client not found. Disable VOX_USE_MYSQL or provide libmysqlclient.")
        endif()
    endif()
endif()
